--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -26,8 +26,9 @@ $imagezoom := resources.Get "js/medium-zoom.min.js" }}
   mediumZoom(".entry-cover img");
   mediumZoom(".post-content img:not([no-zoom])");
 </script>
-{{- end }} {{/* XMAS */}} {{/*
-<style>
+{{- end }}
+
+{{/* XMAS */}} {{/* <style>
   .xny-bg {
     animation: 1s xnyBgAnim;
     opacity: 0.3;
