--- a/layouts/partials/templates/opengraph.html
+++ b/layouts/partials/templates/opengraph.html
@@ -40,21 +40,19 @@
     <meta property="og:image" content="{{ .Params.cover.image | absURL }}">
   {{- else}}
 
-{{/* CUSTOM */}}
+    {{/*  CUSTOM  */}}
     {{- $imgURL := site.Params.assets.assetsURL -}}
     {{- $imgPATH := site.Params.assets.assetsPATH -}}
-  
     {{- $src := .Params.cover.image | safeURL -}}
-  
     {{- if hasPrefix $src $imgPATH -}}
       {{- $urlWithoutHash := .Page.RelPermalink | replaceRE "#.*$" "" -}}
       {{- $articleName := $urlWithoutHash | replaceRE "^.*/([^/]+)/$" "$1" | urlize -}}
       {{- $newSrc := $src | replaceRE (printf "^%s" $imgPATH) (printf "%s%s/" $imgURL $articleName) -}}
-      <meta property="og:image" content="{{ $newSrc }}" />
+      <meta property="og:image" content="{{ $newSrc }}">
     {{- else -}}
-    {{/* ORIGINAL */}} <meta property="og:image" content="{{ (path.Join .RelPermalink .Params.cover.image ) | absURL }}"> {{/* ORiGINAL */}}
+      <meta property="og:image" content="{{ (path.Join .RelPermalink .Params.cover.image ) | absURL }}">
     {{- end -}}
-{{/* CUSTOM */}}
+    {{/*  CUSTOM  */}}
 
   {{- end}}
 {{- else }}
@@ -95,4 +93,8 @@
       {{- end }}
     {{- end }}
   {{- end }}
+{{- end }}
+
+{{- with (.Param "social.fediverse_creator") }}
+  <meta name="fediverse:creator" content="{{ . }}">
 {{- end }}
