--- a/layouts/partials/templates/opengraph.html
+++ b/layouts/partials/templates/opengraph.html
@@ -39,21 +39,10 @@
   {{- if (ne .Params.cover.relative true) }}
     <meta property="og:image" content="{{ .Params.cover.image | absURL }}">
   {{- else}}
-
     {{/*  CUSTOM  */}}
-    {{- $imgURL := site.Params.assets.assetsURL -}}
-    {{- $imgPATH := site.Params.assets.assetsPATH -}}
-    {{- $src := .Params.cover.image | safeURL -}}
-    {{- if hasPrefix $src $imgPATH -}}
-      {{- $urlWithoutHash := .Page.RelPermalink | replaceRE "#.*$" "" -}}
-      {{- $articleName := $urlWithoutHash | replaceRE "^.*/([^/]+)/$" "$1" | urlize -}}
-      {{- $newSrc := $src | replaceRE (printf "^%s" $imgPATH) (printf "%s%s/" $imgURL $articleName) -}}
-      <meta property="og:image" content="{{ $newSrc }}">
-    {{- else -}}
-      <meta property="og:image" content="{{ (path.Join .RelPermalink .Params.cover.image ) | absURL }}">
-    {{- end -}}
+    {{- $src := .Params.cover.image -}}
+    <meta property="og:image" content='{{ partial "utils/getAsset" (dict "src" $src "page" .Page) }}'>
     {{/*  CUSTOM  */}}
-
   {{- end}}
 {{- else }}
   {{- with partial "_funcs/get-page-images" . }}
