--- a/layouts/shortcodes/imgs/gallery.html
+++ b/layouts/shortcodes/imgs/gallery.html
@@ -1,13 +1,22 @@
 <div class="gallery">
   <div class="gallery-grid-wrapper">
-    {{ $params := .Params }}
-    {{ $len := div (len $params) 2 }}
-    {{ range $i := (seq 0 (sub $len 1)) }}
-    {{ $class := index $params (mul $i 2 | add 1) }}
-    {{ $src := index $params (mul $i 2) }}
-    <div class="gallery-item {{ if $class }}{{ $class }}{{ else }}{{ end }}">
-      <img loading="lazy" src="{{ $src }}" alt="" class="gallery-image" />
-    </div>
+    {{ $page := .Page }}
+    
+    {{ $items := split (.Inner | chomp) "\n" }}
+    {{ $items = after 1 $items }}
+    
+    {{ range $items }}
+      {{ if . }}
+        {{ $parts := split . "|" }}
+        {{ $src := index $parts 0 | strings.TrimSpace }}
+        {{ $class := cond (gt (len $parts) 1) (index $parts 1 | strings.TrimSpace) "" }}
+
+        {{ $src = partial "utils/getAsset" (dict "src" $src "page" $page) }}
+
+        <div class="gallery-item {{ $class }}">
+          <img loading="lazy" src="{{ $src }}" alt="" class="gallery-image" />
+        </div>
+      {{ end }}
     {{ end }}
   </div>
 </div>
