--- a/layouts/partials/templates/schema_json.html
+++ b/layouts/partials/templates/schema_json.html
@@ -82,22 +82,10 @@
     {{- if (ne .Params.cover.relative true) -}}
     {{ .Params.cover.image | absURL }},
     {{- else -}}
-    
     {{/*  CUSTOM  */}}
-    {{- $imgURL := site.Params.assets.assetsURL -}}
-    {{- $imgPATH := site.Params.assets.assetsPATH -}}
-  
-    {{- $src := .Params.cover.image | safeURL -}}
-    {{- if hasPrefix $src $imgPATH -}}
-      {{- $urlWithoutHash := .Page.RelPermalink | replaceRE "#.*$" "" -}}
-      {{- $articleName := $urlWithoutHash | replaceRE "^.*/([^/]+)/$" "$1" | urlize -}}
-      {{- $newSrc := $src | replaceRE (printf "^%s" $imgPATH) (printf "%s%s/" $imgURL $articleName) -}}
-      {{ $newSrc }},
-    {{- else -}}
-      {{ (path.Join .RelPermalink .Params.cover.image ) | absURL }},
-    {{- end -}}
+    {{- $src := .Params.cover.image -}}
+    {{ partial "utils/getAsset" (dict "src" $src "page" .Page) }},
     {{/*  CUSTOM  */}}
-
     {{- end}}
   {{- else }}
     {{- $images := partial "templates/_funcs/get-page-images" . -}}
