--- a/layouts/shortcodes/details/1.html
+++ b/layouts/shortcodes/details/1.html
@@ -2,6 +2,6 @@
   {{- $summary := cond .IsNamedParams (.Get "title") (.Get 0) -}}
   <summary>{{ $summary | .Page.RenderString }}</summary>
   <div class="a-details-inner">
-    {{ .Inner | .Page.RenderString }}
+    {{ .Inner }}
   </div>
 </details>
