--- a/layouts/shortcodes/embedPost.html
+++ b/layouts/shortcodes/embedPost.html
@@ -27,24 +27,11 @@
         </div> -->
       </div>
     </div>
-    {{ with $page.Params.cover.image }}
-    {{- $imgURL := site.Params.assets.assetsURL -}}
-    {{- $imgPATH := site.Params.assets.assetsPATH -}}
-
-    {{- $src := $page.Params.cover.image | safeURL -}}
-    {{- $src2 := $page.Params.cover.image | absURL | safeURL -}}
 
     <div class="embed-post-cover">
-      {{- if hasPrefix $src $imgPATH -}}
-      {{- $urlWithoutHash := $page.RelPermalink | replaceRE "#.*$" "" -}}
-      {{- $articleName := $urlWithoutHash | replaceRE "^.*/([^/]+)/$" "$1" | urlize -}}
-      {{- $newSrc := $src | replaceRE (printf "^%s" $imgPATH) (printf "%s%s/" $imgURL $articleName) -}}
-      <img loading="lazy" src='{{ $newSrc }}' alt="{{ $page.Title }} - Cover" no-zoom>
-      {{- else -}}
-      <img loading="lazy" src='{{ $src2 }}' alt="{{ $page.Title }} - Cover" no-zoom>
-      {{- end -}}
+      {{- $src := $page.Params.cover.image -}}
+      <img loading="lazy" src='{{ partial "utils/getAsset" (dict "src" $src "page" $page) }}' alt="{{ $page.Title }} - Cover" no-zoom>
     </div>
-    {{ end }}
   </a>
 </figure>
 {{ else }}
@@ -61,7 +48,7 @@
     </div>
 
     <div class="embed-post-cover">
-      <img loading="lazy" src="https://nozsh.su/assets/img/no-signal.jpg" alt="Ошибка, запись не найдена" no-zoom>
+      <img loading="lazy" src='{{- partialCached "utils/getAssetFree" . -}}/img/loose/no-signal.avif' alt="Ошибка, запись не найдена" no-zoom>
     </div>
   </div>
 </figure>
