--- a/layouts/shortcodes/imgs/img.html
+++ b/layouts/shortcodes/imgs/img.html
@@ -4,12 +4,5 @@
 {{- $src := .Get 2 | safeURL -}}
 
 <p>
-  {{- if hasPrefix $src $imgPATH -}}
-    {{- $urlWithoutHash := .Page.RelPermalink | replaceRE "#.*$" "" -}}
-    {{- $articleName := $urlWithoutHash | replaceRE "^.*/([^/]+)/$" "$1" | urlize -}}
-    {{- $newSrc := $src | replaceRE (printf "^%s" $imgPATH) (printf "%s%s/" $imgURL $articleName) -}}
-    <img loading="lazy" alt='{{ .Get 0 }}' width='{{.Get 1}}' src='{{ $newSrc }}'>
-  {{- else -}}
-    <img loading="lazy" alt='{{ .Get 0 }}' width='{{ .Get 1 }}' src='{{ .Get 2 }}'>
-  {{- end -}}
+  <img loading="lazy" alt='{{ .Get 0 }}' width='{{ .Get 1 }}' src='{{ partial "utils/getAsset" (dict "src" (.Get 2) "page" .Page) }}'>
 </p>
