--- a/assets/css/extended/custom-theme-vars.css
+++ b/assets/css/extended/custom-theme-vars.css
@@ -9,6 +9,7 @@
   --header-bg: rgba(255, 255, 255, 0.5);
   --accent: var(--accent-jam);
   --mark-color: #fff;
+  --code-block-bg: rgb(46, 46, 51);
 }
 
 .dark {
