--- a/layouts/shortcodes/ahtung/1.html
+++ b/layouts/shortcodes/ahtung/1.html
@@ -1,4 +1,4 @@
-{{ $lang := .Get "lang" }}
+{{ $lang := .Page.Language.Lang }}
 
 <div class="kg-card kg-callout-card kg-callout-card-warn">
   <div class="kg-callout-emoji">🚧</div>
