--- a/layouts/shortcodes/details/1.html
+++ b/layouts/shortcodes/details/1.html
@@ -3,5 +3,6 @@
   <summary>{{ $summary | .Page.RenderString }}</summary>
   <div class="a-details-inner">
     {{ .Inner }}
+    <!-- {{- .Inner | .Page.RenderString -}} -->
   </div>
 </details>
