--- a/layouts/shortcodes/embedPost.html
+++ b/layouts/shortcodes/embedPost.html
@@ -66,7 +66,7 @@
     {{ if $source }}
       <a href="{{ .Site.BaseURL }}source-by-original/">
         <div class="source-post-line">
-          <img src='{{- partial "utils/getAssetFree" . -}}/img/loose/sourcePostBG.avif' alt="Srouce Post Background" no-zoom>
+          <img src='{{- partial "utils/getAssetFree" . -}}/img/loose/sourcePostBG.avif' alt="Source Post Background" no-zoom>
           <div class="source-post-line-bg"></div>
           <div class="source-post-line-content">
             <div class="marquee">
