--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -43,7 +43,7 @@ $imagezoom := resources.Get "js/medium-zoom.min.js" }}
       opacity: 0.3;
     }
   }
-  .kg-callout-card, article.first-entry, details.a-details, .embed-post-card, .references-card {
+  .kg-callout-card, #searchbox, article.first-entry, details.a-details, .embed-post-card, .references-card {
     backdrop-filter: blur(6px);
   }
 </style>
