--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -1,32 +1,50 @@
+{{/* Load Masonry List */}}
 {{- if (.Param "ListMasonry") }}
   {{- $listMasonry := resources.Get "js/list-masonry.js" }}
-  <script src="{{ $listMasonry.RelPermalink }}?v=2" defer></script>
+  {{- if not site.Params.assets.disableFingerprinting }}
+      {{ $listMasonry := $listMasonry | fingerprint }}
+      <script defer crossorigin="anonymous" src="{{ $listMasonry.RelPermalink }}" integrity="{{ $listMasonry.Data.Integrity }}"></script>
+    {{- else }}
+      <script defer crossorigin="anonymous" src="{{ $listMasonry.RelPermalink }}"></script>
+  {{- end }}
 {{- end }}
 
-{{- $ntlinks := resources.Get "js/ntlinks.js" }}
-<script src="{{ $ntlinks.RelPermalink }}?v=2" defer></script>
+{{/* Load what can be loaded as one file */}}
+{{- $ntlinksJS := resources.Get "js/ntlinks.js" }}
+{{- $anchorscrollJS := resources.Get "js/anchor-scroll.js" }}
+{{- $customjs := (slice $ntlinksJS $anchorscrollJS) | resources.Concat "assets/js/custom.js" | resources.Minify }}
 
-{{/* Load Smooth Anchor Scroll script */}}
-{{- $anchorscroll := resources.Get "js/anchor-scroll.js" }}
-<script src="{{ $anchorscroll.RelPermalink }}?v=1" defer></script>
+{{- if not site.Params.assets.disableFingerprinting }}
+    {{ $customjs := $customjs | fingerprint }}
+    <script defer crossorigin="anonymous" src="{{ $customjs.RelPermalink }}" integrity="{{ $customjs.Data.Integrity }}"></script>
+  {{- else }}
+    <script defer crossorigin="anonymous" src="{{ $customjs.RelPermalink }}"></script>
+{{- end }}
 
 {{/* Load Lite YouTube Embed JS */}}
 {{- $liteytembedJS := resources.Get "js/lite-yt-embed.js" }}
-<script src="{{ $liteytembedJS.RelPermalink }}?v=0.3.3" defer></script>
+{{- if not site.Params.assets.disableFingerprinting }}
+    {{- $liteytembedJS_f := $liteytembedJS | fingerprint }}
+    <script defer crossorigin="anonymous" src="{{ $liteytembedJS.RelPermalink }}?v=0.3.3" integrity="{{ $liteytembedJS_f.Data.Integrity }}"></script>
+    {{- else }}
+    <script defer crossorigin="anonymous" src="{{ $liteytembedJS.RelPermalink }}?v=0.3.3"></script>
+{{- end }}
 
 {{/* Load mediumZoom script */}}
 {{- if (.Param "EnableImageZoom") }} {{-
-$imagezoom := resources.Get "js/medium-zoom.min.js" }}
-<script
-  src="{{ $imagezoom.RelPermalink }}?v=1.0.6"
-  {{- if site.Params.assets.disableFingerprinting }}
-  integrity="{{ $imagezoom.Data.Integrity }}"
+  $mediumzoomJS := resources.Get "js/medium-zoom.min.js" }}
+
+  {{- if not site.Params.assets.disableFingerprinting }}
+      {{ $mediumzoomJS_f := $mediumzoomJS | fingerprint }}
+      <script crossorigin="anonymous" src="{{ $mediumzoomJS.RelPermalink }}?v=1.0.6" integrity="{{ $mediumzoomJS_f.Data.Integrity }}"></script>
+    {{- else }}
+      <script crossorigin="anonymous" src="{{ $mediumzoomJS.RelPermalink }}?v=1.0.6"></script>
   {{- end }}
-></script>
-<script>
-  mediumZoom(".entry-cover img");
-  mediumZoom(".post-content img:not([no-zoom])");
-</script>
+
+  <script>
+    mediumZoom(".entry-cover img");
+    mediumZoom(".post-content img:not([no-zoom])");
+  </script>
 {{- end }}
 
 {{/* XMAS */}} {{/* */}}
@@ -60,16 +78,15 @@ $imagezoom := resources.Get "js/medium-zoom.min.js" }}
     initialOpacity: 0.2, // Opacity on born
     opacityThreshold: 0.5, // Opacity on start dying
   };
-</script>
-{{/* */}}
+</script> {{/* */}}
 
 <!-- Load xmas.js -->
-{{/* */}}
-<script
+<script {{/* */}}
   src="https://assets.nozsh.com/js/loose/xmas.min.js?v={{ time.Now.Unix }}"
   defer
-></script>
-{{/* */}}
+></script> {{/* */}}
+
+
 {{/* GoatCounter */}}
 <script
   data-goatcounter="https://saladvisor-blog.goatcounter.com/count"
