--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -5,28 +5,28 @@
 {{- end }}
 
 {{- if not .Lastmod.IsZero -}}
-{{ if gt .Lastmod .Date }}
-{{- $scratch.Add "meta" (slice (printf "<span title='%s'>upd: %s</span>" (.Lastmod) (.Lastmod | time.Format (default "January 2, 2006" site.Params.DateFormat)))) }}
-{{end}}
+  {{ if gt .Lastmod .Date }}
+    {{- $scratch.Add "meta" (slice (printf "<span title='%s'>upd: %s</span>" (.Lastmod) (.Lastmod | time.Format (default "January 2, 2006" site.Params.DateFormat)))) }}
+  {{end}}
 {{- end }}
 
 {{- if (.Param "ShowReadingTime") -}}
-{{- $scratch.Add "meta" (slice (i18n "read_time" .ReadingTime | default (printf "%d min" .ReadingTime))) }}
+{{- $scratch.Add "meta" (slice (printf "<span>%s</span>" (i18n "read_time" .ReadingTime | default (printf "%d min" .ReadingTime)))) }}
 {{- end }}
 
 {{- if (.Param "ShowWordCount") -}}
-{{- $scratch.Add "meta" (slice (i18n "words" .WordCount | default (printf "%d words" .WordCount))) }}
+{{- $scratch.Add "meta" (slice (printf "<span>%s</span>" (i18n "words" .WordCount | default (printf "%d words" .WordCount)))) }}
 {{- end }}
 
 {{- if not (.Param "hideAuthor") -}}
 {{- with (partial "author.html" .) }}
-{{- $scratch.Add "meta" (slice .) }}
+{{- $scratch.Add "meta" (slice (printf "<span>%s</span>" .)) }}
 {{- end }}
 {{- end }}
 
 {{- if (.Param "byai") -}}
-{{- $byaiBadge := partial "byai.html" . | safeHTML -}}
-{{- $scratch.Add "metaByAi" (slice $byaiBadge) }}
+  {{- $byaiBadge := partial "byai.html" . | safeHTML -}}
+  {{- $scratch.Add "metaByAi" (slice (printf "<span>%s</span>" $byaiBadge)) }}
 {{- end }}
 
 {{- $combinedMeta := slice }}
